--- a/src/app/styles/Main.scss
+++ b/src/app/styles/Main.scss
@@ -1,8 +1,8 @@
 .main {
-    margin-top: 45px;
   h1 {
     font-size: 24px;
     font-weight: 700;
+    margin-bottom: 39px;
   }
   &__content {
     justify-content: space-between;
